できるかな？

--- a/mileshareApp/Base.lproj/Main.storyboard
+++ b/mileshareApp/Base.lproj/Main.storyboard
@@ -6063,7 +6063,7 @@ URL ：http://mileshare.jp/
         <image name="虫眼鏡の無料アイコン8" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="X5I-NX-LGK"/>
+        <segue reference="0L7-Ia-TDN"/>
         <segue reference="ggf-XX-EL2"/>
     </inferredMetricsTieBreakers>
 </document>
